hphp/hack/test/typecheck/records/record_decl_bad_type.php.exp
File "record_decl_bad_type.php", line 4, characters 6-9:
Unbound name: self (an object type) (Naming[2049])
File "record_decl_bad_type.php", line 8, characters 6-9:
Cannot use "this" outside of a class (Naming[2045])
