hphp/hack/test/typecheck/records/record_decl_bad_type.php
<?hh

record A {
  x: self,
}

record B {
  x: this,
}
